# azurertos-efx32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cmake  main.c  sample_netx_duo_ping.c
cmake/: gecko_sdk_suite.cmake  series0.cmake  series1.cmake  series2.cmake  toolchain.cmake
netxduo_port/: nx_driver_efm32gg11b.c  nx_driver_efm32gg11b.h  nx_driver_efm32gg11b_low_level.s
threadx_port/: tx_initialize_low_level.S
